--- a/about.html
+++ b/about.html
@@ -10,11 +10,11 @@ permalink: /about
 <div class="about">
     <div class="intro row transition hidden-right m-auto add-padding-normal" data-threshold="0">
         <div class="col-md-3 offset-md-2 align-self-center">
-            {% image yueh.png alt="My picture" class="avatar img-fluid img-thumbnail" %}
+            {% image yueh_derp.jpg alt="Derp me" class="avatar img-fluid img-thumbnail" %}
         </div>
         <div class="col-md-7 align-self-center intro-text text_left">
             <h1>I'm Yueh 🐢</h1>
-            I'm a junior full stack developer and I'm a man of culture.
+            I'm a junior full stack developer and a man of culture.
             <p>
                 {% include socials.html %}
             </p>
