make home page responsive

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@ title: Home
 {% assign tag = 'home' %}
 <div class="home">
     <div class="shade row mx-auto add-padding-top-large add-padding-bottom-large">
-        <div class="col-4 offset-3 align-self-center intro-text text_right">
+        <div class="col-md-4 offset-md-3 align-self-center intro-text text_right">
             <h1>Hi, I'm Yueh 🐢</h1>
             <p>
                 I'm a junior full stack developer and this website was my 2020 Summer project.
             </p>
         </div>
-        <div class="col-3 align-self-center">
+        <div class="col-md-3 align-self-center">
             {% image yueh.png alt="Me" class="avatar img-fluid img-thumbnail" %}
         </div>
     </div>
