--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ title: Home
         <div class="col-md-4 offset-md-3 align-self-center intro-text text_right">
             <h1>Hi, I'm Yueh 🐢</h1>
             <p>
-                I'm a junior full stack developer and this website was my 2020 Summer project.
+                I'm a full stack devops develoer and this website was my 2020 Summer project.
             </p>
         </div>
         <div class="col-md-3 align-self-center">
@@ -21,8 +21,8 @@ title: Home
             <h1 class="add-padding-normal">Recent Activities</h1>
             <hr>
             <p>
-                I've been learning about Kubernetes for work. I have to create several Kubernetes clusters using
-                Openstack Magnum with prometheus monitoring, autoscaling and autohealing features enabled.
+                Lately, I have been working mostly on backend development in TypeScript and doing DevOps work. I'm
+                developing new microservices and maintaining kubernetes clusters for different environments.
             </p>
         </div>
         <div class="home-section">
