--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ title: Home
         <div class="col-md-4 offset-md-3 align-self-center intro-text text_right">
             <h1>Hi, I'm Yueh 🐢</h1>
             <p>
-                I'm a full stack devops develoer and this website was my 2020 Summer project.
+                I'm a full stack devops developer and this website was my 2020 Summer project.
             </p>
         </div>
         <div class="col-md-3 align-self-center">
@@ -22,7 +22,7 @@ title: Home
             <hr>
             <p>
                 Lately, I have been working mostly on backend development in TypeScript and doing DevOps work. I'm
-                developing new microservices and maintaining kubernetes clusters for different environments.
+                developing new microservices and maintaining production ready kubernetes clusters.
             </p>
         </div>
         <div class="home-section">
