--- a/404.html
+++ b/404.html
@@ -7,11 +7,11 @@ permalink: /404
 <style type="text/css" media="screen">
   .container-404 {
     margin: 10px auto;
-    max-width: 600px;
+    max-width: 1000px;
     text-align: center;
   }
 
-  h1 {
+  h2 {
     margin: 30px 0;
     font-size: 4em;
     line-height: 1;
@@ -20,11 +20,9 @@ permalink: /404
 </style>
 
 <div class="container-404">
-  <div class="padder-small"></div>
-  <h1>404</h1>
-
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
-  <div class="padder-small"></div>
-  <div class="padder-small"></div>
+  <div class="padder-tiny"></div>
+  <img src="{{ "/assets/images/404.jfif" | relative_url }}" width="1000" class="img-fluid img-thumbnail" alt="404 cat">
+  <br><br>
+  <h3><strong>The requested page could not be found :(</strong></h3>
+  <div class="padder-large"></div>
 </div>
