--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@ title: Home
         <div class="col-md-4 offset-md-3 align-self-center intro-text text_right">
             <h1 class="add-padding-small">Hi, I'm Yueh 🐢</h1>
             <p>
-                I'm a Full Stack DevOps developer and this website was my 2020 Summer project. I plan to post articles
-                about things that I learn.
+                I'm a Full Stack DevOps developer and this website was my 2020 Summer project. I want to write articles
+                about new things that I learn.
             </p>
         </div>
         <div class="col-md-3 align-self-center">
@@ -25,7 +25,8 @@ title: Home
             <hr>
             <p>
                 I have been maintaining backend microservices written in NodeJS with TypeScript and
-                managing Kubernetes clusters deployed with Openstack Magnum. I am interested in frontend development.
+                managing Kubernetes clusters deployed with Openstack Magnum. I am currently interested in web
+                development.
             </p>
         </div>
         <div class="home-section">
