--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ title: Home
         <div class="col-md-4 offset-md-3 align-self-center intro-text text_right">
             <h1 class="add-padding-small">Hi, I'm Yueh 🐢</h1>
             <p>
-                I'm a Full Stack DevOps developer and this website was my 2020 Summer project. I want to write articles
+                I'm a Full Stack DevOps developer and this website was my Summer project 2020. I want to write articles
                 about new things that I learn.
             </p>
         </div>
