--- a/_pages/about.html
+++ b/_pages/about.html
@@ -14,7 +14,7 @@ permalink: /about
         </div>
         <div class="col-md-7 align-self-center intro-text text_left">
             <h1>I'm Yueh 🐢</h1>
-            I'm a Full Stack DevOps developer and a man of culture :)
+            I'm a Full-Stack and DevOps developer :)
             <p>
                 {% include socials.html %}
             </p>
