--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@ title: Home
         <div class="col-md-4 offset-md-3 align-self-center intro-text text_right">
             <h1 class="add-padding-small">Hi, I'm Yueh 🐢</h1>
             <p>
-                I'm a Full Stack DevOps developer and this website was my Summer project 2020. I want to write articles
-                about new things that I learn.
+                I'm a Full Stack and DevOps developer and this website was my Summer project 2020. I started writing
+                articles as a way to keep track of new things that I learn.
             </p>
         </div>
         <div class="col-md-3 align-self-center">
@@ -24,9 +24,10 @@ title: Home
             <h1 class="add-padding-small">Recent Activities</h1>
             <hr>
             <p>
-                I have been maintaining backend microservices written in NodeJS with TypeScript and
-                managing Kubernetes clusters deployed with Openstack Magnum. I am currently interested in web
-                development.
+                I am working with backend microservices written in TypeScript with NodeJS and
+                managing production-ready Kubernetes clusters deployed with Openstack Magnum. I am currently interested
+                in web
+                development, specifically frontend development.
             </p>
         </div>
         <div class="home-section">
