update index and projects

--- a/index.html
+++ b/index.html
@@ -24,10 +24,9 @@ title: Home
             <h1 class="add-padding-small">Recent Activities</h1>
             <hr>
             <p>
-                I am working with backend microservices written in TypeScript with NodeJS and
-                managing production-ready Kubernetes clusters deployed with Openstack Magnum. I am currently interested
-                in web
-                development, specifically frontend development.
+                At work, I have mainly been working on NodeJS backend microservices with TypeScript and
+                managing Kubernetes clusters deployed with Openstack Magnum. For my personal projects, I just started
+                working on a small project to recreate the when2meet app using ReactJS with TypeScript.
             </p>
         </div>
         <div class="home-section">
