--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@ title: Home
         <div class="col-md-4 offset-md-3 align-self-center intro-text text_right">
             <h1 class="add-padding-small">Hi, I'm Yueh 🐢</h1>
             <p>
-                I'm a Full Stack and DevOps developer and this website was my Summer project 2020. I started writing
-                articles as a way to keep track of new things that I learn.
+                I'm a full-stack developer that also does DevOps. This is my personal website/blog where I write
+                tutorials and articles about new things that I learn.
             </p>
         </div>
         <div class="col-md-3 align-self-center">
@@ -24,8 +24,11 @@ title: Home
             <h1 class="add-padding-small">Recent Activities</h1>
             <hr>
             <p>
-                At work, I have mainly been working on NodeJS backend microservices with TypeScript and
-                managing Kubernetes clusters deployed with Openstack Magnum. For my personal projects, I just started
+                For work, I have mainly been working on backend microservices (NodeJS with TypeScript) and
+                managing Kubernetes clusters deployed with Openstack Magnum. Lately, I have been working on creating GUI applications in Docker that can share an Nvidia GPU using Virtual GL.
+            </p>
+            <p>
+                For my personal projects, I just started
                 working on a small project to recreate the when2meet app using ReactJS with TypeScript.
             </p>
         </div>
