--- a/_pages/about.html
+++ b/_pages/about.html
@@ -12,13 +12,7 @@ permalink: /about
         <div class="col-md-3 offset-md-2 align-self-center">
             {% image yueh_derp.jpg alt="Derp me" class="avatar img-fluid img-thumbnail" %}
         </div>
-        <div class="col-md-7 align-self-center intro-text text_left">
-            <h1>I'm Yueh 🐢</h1>
-            I'm a full-stack web developer but I also do DevOps :)
-            <p>
-                {% include socials.html %}
-            </p>
-        </div>
+        {% include about_me.html %}
     </div>
     <div class="about-section row shade add-padding-normal">
         <div class="col-md-5 offset-md-2 align-self-center transition hidden-right text_left" data-threshold="0">
