--- a/index.html
+++ b/index.html
@@ -24,12 +24,7 @@ title: Home
             <h1 class="add-padding-small">Recent Activities</h1>
             <hr>
             <p>
-                For work, I have mainly been working on backend microservices (NodeJS with TypeScript) and
-                managing Kubernetes clusters deployed with Openstack Magnum. Lately, I have been working on creating GUI applications in Docker that can share an Nvidia GPU using Virtual GL.
-            </p>
-            <p>
-                For my personal projects, I just started
-                working on a small project to recreate the when2meet app using ReactJS with TypeScript.
+                I have mainly been working on backend microservices (NodeJS with TypeScript).
             </p>
         </div>
         <div class="home-section">
